--- a/sales.html
+++ b/sales.html
@@ -4,8 +4,8 @@
     <title>Pat's Salmon Cookies</title>
   </head>
   <body>
-
-    <table id="Stores"></table>
+    <h1>Pat's Salmon Cookies</h1>
+    <table id="stores"></table>
   <script src="app.js" type="text/javascript"></script>
   </body>
 
