--- a/sales.html
+++ b/sales.html
@@ -4,7 +4,7 @@
     <title>Pat's Salmon Cookies</title>
   </head>
   <body>
-    <form id="form">
+    <form id="form">//start of form HTML
       <fieldset>
         <label for="name">Store Name</label>
         <input type="text" name="name" placeholder="enter the new store name" required>
@@ -26,7 +26,7 @@
       </fieldset>
 
       <button id="submitButton" type="submit">Add a new store!</button>
-    </form>
+    </form>//end of form HTML
     <h1>Pat's Salmon Cookies</h1>
     <table id="stores"></table>
   <script src="app.js" type="text/javascript"></script>
