--- a/sales.html
+++ b/sales.html
@@ -4,14 +4,15 @@
     <title>Pat's Salmon Cookies</title>
   </head>
   <body>
-    <form id="form">//start of form HTML
+
+    <form id="form">
       <fieldset>
         <label for="name">Store Name</label>
         <input type="text" name="name" placeholder="enter the new store name" required>
       </fieldset>
 
       <fieldset>
-        <label for="minCust">Min Customters per Hour</label>
+        <label for="minCust">Min Customers per Hour</label>
         <input type="text" name="minCust" placeholder="minimum customers per hour" required>
       </fieldset>
 
@@ -26,7 +27,8 @@
       </fieldset>
 
       <button id="submitButton" type="submit">Add a new store!</button>
-    </form>//end of form HTML
+    </form>
+
     <h1>Pat's Salmon Cookies</h1>
     <table id="stores"></table>
   <script src="app.js" type="text/javascript"></script>
