--- a/sales.html
+++ b/sales.html
@@ -7,21 +7,17 @@
 
     <form id="form">
       <fieldset>
+        <legend>Add and/or Update</legend>
+
         <label for="name">Store Name</label>
         <input type="text" name="name" placeholder="enter the new store name" required>
-      </fieldset>
 
-      <fieldset>
         <label for="minCust">Min Customers per Hour</label>
         <input type="text" name="minCust" placeholder="minimum customers per hour" required>
-      </fieldset>
 
-      <fieldset>
         <label for="maxCust">Max Customers per Hour</label>
         <input type="text" name="maxCust" placeholder="maximum customers per hour" required>
-      </fieldset>
 
-      <fieldset>
         <label for="avgCookieSale">Avg Cookies per Customer</label>
         <input type="text" name="avgCookieSale" placeholder="Average Cookie Sales" required>
       </fieldset>
