--- a/sales.html
+++ b/sales.html
@@ -3,6 +3,7 @@
   <head>
     <title>Pat's Salmon Cookies</title>
   </head>
+  <link rel="stylesheet" href="style.css">
   <body>
 
     <form id="form">
