--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <header>
       <div>
-        <a href="index.html"><img src="pats-logo" id="head-logo"></a>
+        <a href="index.html"><img src="salmon.png" id="head-logo"></a>
         <nav>
             <ul>
 
