--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main>
       <section>
-        <h2>A Better Way to Salmon</h2>
+        <h2>Pat's Salmon Cookies! (A Better Way to Salmon)</h2>
         <p>Eat More Salmon (Cookies)!        </p>
       </section>
 
@@ -42,7 +42,7 @@
       </section>
     </main>
     <footer>
-      <p>Come in and say Hi!</p>
+      <p>We cater!  Call us at 206-555-1234 for an instant quote!</p>
     </footer>
 
   </body>
