--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <title>Pat's Salmon Cookies</title>
   </head>
-  <body>
 
     <header>
-      <div>
-        <a href="index.html"><img src="salmon.png" id="head-logo"></a>
+      <div class="inner">
         <nav>
-            <ul>
-
-
-            </ul>
+          <ul>
+            <li><a href="about.html">About us!</a></li>
+            <li><a href="index.html">Get some....swag!</a></li>
+            <!-- <li><a href="index.html">Return to the home page!</a></li> -->
+          </ul>
         </nav>
       </div>
     </header>
 
     <main>
       <section>
-        <h2>Pat's Salmon Cookies! (A Better Way to Salmon)</h2>
-        <p>Eat More Salmon (Cookies)!        </p>
+        <h1>Pat's Salmon Cookies!</h1>
+        <h2>(A Better Way to Salmon)</h2>
       </section>
 
-      <section class="locations">
+      <img src="assets/salmon.png" alt="logo" />
+
+      <section class="Locations:">
         <h2>Locations</h2>
         <ul>
           <li>First and Pike</li>
@@ -43,6 +44,7 @@
     </main>
     <footer>
       <p>We cater!  Call us at 206-555-1234 for an instant quote!</p>
+
     </footer>
 
   </body>
