fixed links between pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
           <ul>
             <li><a href="about.html">About us!</a></li>
-            <li><a href="index.html">Get some....swag!</a></li>
+            <li><a href="swag.html">Get some....swag!</a></li>
             <!-- <li><a href="index.html">Return to the home page!</a></li> -->
           </ul>
         </nav>
